# MastersThesisProject

./: .gitignore  README.md  UpgradeLog.htm  VoiceCommand.VC.db  VoiceCommand.sdf  VoiceCommand.sln
Currennt/: README.txt
Currennt/project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeFiles — skrót.lnk  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  currennt.sln  currennt.vcxproj  currennt.vcxproj.filters
Currennt/sources/: CMakeLists.txt
Currennt/sources/currennt/Release/: currennt.exp  currennt.lib
Currennt/sources/tools/: netcdf.h
LibServ/: LibServ.csproj  Program.cs  packages.config
LibServ/Properties/: AssemblyInfo.cs
LibServ/csFiles/: Account.cs  Elements.cs  IbmBlueMixResponse.cs  IbmBlueMixServ.cs  Microphone.cs  OortServ.cs  WitAiResponse.cs  WitAiServ.cs
Release/: testDll.exp
Release/VoiceCommand.TestDll.Windows/: VoiceCommand_TestDll.pri
Release/VoiceCommand.TestDll.WindowsPhone/: VoiceCommand_TestDll.pri
TestApp/: Program.cs  TestApp.csproj
TestApp/Properties/: AssemblyInfo.cs
VoiceCommand.TestDll/VoiceCommand.TestDll.Shared/: VoiceCommand.TestDll.Shared.vcxitems  VoiceCommand.TestDll.Shared.vcxitems.filters  VoiceCommand.TestDll.cpp
VoiceCommand.TestDll/VoiceCommand.TestDll.Windows/: VoiceCommand.TestDll.Windows.vcxproj
VoiceCommand.TestDll/VoiceCommand.TestDll.WindowsPhone/: VoiceCommand.TestDll.WindowsPhone.vcxproj
VoiceCommand/VoiceCommand.Droid/: MainActivity.cs  MicrophoneDroid.cs  (+2 more)
testDll/: testClassDll.cpp  testClassDll.h  testDll.vcxproj  testDll.vcxproj.filters
(+82 files in other folders)
